--- a/src/main/resources/com/example/networkproject/firstView.fxml
+++ b/src/main/resources/com/example/networkproject/firstView.fxml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <AnchorPane layoutX="-8.0" prefHeight="72.0" prefWidth="809.0" style="-fx-background-color: #5A5A5A;">
+         <children>
+            <Label alignment="TOP_CENTER" layoutX="292.0" layoutY="6.0" text="Chat Room" textFill="WHITE" AnchorPane.topAnchor="6.0">
+               <font>
+                  <Font name="Krub SemiBold" size="45.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="-9.0" layoutY="928.0" prefHeight="72.0" prefWidth="809.0" style="-fx-background-color: #5A5A5A;">
+         <children>
+            <TextField layoutX="24.0" layoutY="19.0" prefHeight="40.0" prefWidth="628.0" promptText="Enter your message!!!" style="-fx-background-radius: 10;" />
+            <Button layoutX="685.0" layoutY="17.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="104.0" style="-fx-background-radius: 10;" text="Send" />
+         </children>
+      </AnchorPane>
+      <ScrollPane layoutY="71.0" prefHeight="859.0" prefWidth="800.0">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+        </content>
+      </ScrollPane>
+   </children>
+</AnchorPane>
